# EightfoldAI_CandidateTransformer

./: .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  README.md  pyproject.toml  requirements.txt
configs/: custom_minimal.json
data/sample/: ats_profile.json  recruiter_export.csv  recruiter_notes.txt
design/: README.md  stage1_design.tex
outputs/: custom_profile.json  default_profile.json  explained_profile.json
scripts/: make_design_pdf.py  make_resume.py
src/canonical/: __init__.py  cli.py  confidence.py  match.py  merge.py  models.py  normalize_stage.py  pipeline.py  project.py  validate.py
src/canonical/normalize/: __init__.py  country.py  dates.py  phone.py  skills.py
src/canonical/sources/: __init__.py  ats_json.py  base.py  recruiter_csv.py  recruiter_notes.py  resume_pdf.py
tests/: conftest.py  test_merge.py  test_normalize.py  test_pipeline.py  test_project.py
